--- a/force-app/main/default/classes/EMS_EM_CreationOnboard.cls
+++ b/force-app/main/default/classes/EMS_EM_CreationOnboard.cls
@@ -163,7 +163,7 @@ public without Sharing class EMS_EM_CreationOnboard {
         return onBoardingDetailsList[0];
     }
     
-    
+    @AuraEnabled
     public static List<ContentDocument> returnFiles(String onBoardingRecordId){
         
         try{
