23rd may-4th-prod

--- a/force-app/main/default/classes/ResourceriseToHR.cls
+++ b/force-app/main/default/classes/ResourceriseToHR.cls
@@ -3,7 +3,7 @@ public class ResourceriseToHR  implements TriggerAction.AfterInsert{
         /**
     * @author Naga
     * @date 2/22/2023
-    * @description Before Insert 
+    * @description after Insert 
     *
     * CHANGE HISTORY
     * ====================================================================================================
