--- a/force-app/main/default/classes/CalculateAvailableLeaveBalanceTest.cls
+++ b/force-app/main/default/classes/CalculateAvailableLeaveBalanceTest.cls
@@ -25,6 +25,9 @@ public class CalculateAvailableLeaveBalanceTest {
         EMS_LM_Leave__c compofftype;
         EMS_LM_Leave__c paternitytype;
        EMS_LM_Leave__c  Bereavementtype;
+         EMS_LM_Leave__c paidtimeof;
+        Office_Location__c hydIndia;
+        Office_Location__c usLocation;
             
         Account acc;Contact con;
         system.runAs(adminuser){
@@ -35,6 +38,13 @@ public class CalculateAvailableLeaveBalanceTest {
          compofftype = TestDataFactory.createLeaveType('Compensatory Off',true);
             paternitytype = TestDataFactory.createLeaveType('Paternity Leave',true);
             Bereavementtype = TestDataFactory.createLeaveType('Bereavement Leave',true);
+            paidtimeof = TestDataFactory.createLeaveType('Paid time off',true);
+        Office_Location__c HYD = new Office_Location__c();
+        HYD.Name = 'Hyderabad - India';
+        HYD.Address__c = 'Jubilee Hills. Road No 36';
+        HYD.Country__c = 'India';
+        HYD.Timezone__c = 'Asia/Kolkata';
+        INSERT HYD;
           acc = TestDataFactory.createAccount(true);
 		 con=  TestDataFactory.createResourceContact(acc.id, false);
          con.EMS_RM_Employee_Id__c = 'CP10234';
@@ -42,6 +52,7 @@ public class CalculateAvailableLeaveBalanceTest {
          con.EMS_LM_No_Of_Maternity_Leaves_Credit__c = 0;
          con.EMS_RM_ApplicantStatus_Update__c = 'Active';
          con.RecordTypeId = ContactConstant.RESOURCE_RECORDTYPEID;
+         con.Work_Location__c = HYD.Id;
          insert con;
         }
        
@@ -59,6 +70,7 @@ public class CalculateAvailableLeaveBalanceTest {
          EMS_LM_Leave_Credit__c commOffAnnual = Testdatafactory.createLeaveCredit(con.id,system.today(),1,compofftype.id, true);
            EMS_LM_Leave_Credit__c patAnnual = Testdatafactory.createLeaveCredit(con.id,system.today(),1,paternitytype.id, true); 
             EMS_LM_Leave_Credit__c berveAnnual = Testdatafactory.createLeaveCredit(con.id,system.today(),1,Bereavementtype.id, true);
+            EMS_LM_Leave_Credit__c paidtof = Testdatafactory.createLeaveCredit(con.id,system.today(),1,paidtimeof.id, true);
         }
         system.runAs(u){
           List<EMS_LM_Leave_History__c> hlist = new List<EMS_LM_Leave_History__c>();
@@ -67,7 +79,8 @@ public class CalculateAvailableLeaveBalanceTest {
           hlist.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(8), system.today().adddays(9), compofftype.id, false, null));
             hlist.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(7), system.today().adddays(9), paternitytype.id, false, null));
              hlist.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(7), system.today().adddays(9), Bereavementtype.id, false, null));
-         insert hlist;
+         	hlist.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(7), system.today().adddays(9), paidtimeof.id, false, null));
+            insert hlist;
         }
         test.stopTest();
         
