--- a/force-app/main/default/classes/BatchToAdd5LeavesEveryQuarterTest.cls
+++ b/force-app/main/default/classes/BatchToAdd5LeavesEveryQuarterTest.cls
@@ -29,6 +29,9 @@ private class BatchToAdd5LeavesEveryQuarterTest {
             EMS_LM_Leave__c compofftype = TestDataFactory.createLeaveType('Compensatory Off',true);
             EMS_LM_Leave__c wfhtype = TestDataFactory.createLeaveType('Work From Home',true);
             EMS_LM_Leave__c paidTimeOff = TestDataFactory.createLeaveType('Paid time off',true);
+              EMS_LM_Leave__c paidtimeof = TestDataFactory.createLeaveType('Paid time off',true);
+        EMS_LM_Leave__c unpaidTimeOff = TestDataFactory.createLeaveType('UnPaid time off',true);
+        EMS_LM_Leave__c floatingholiday = TestDataFactory.createLeaveType('Floating Holiday',true);
             acc = TestDataFactory.createAccount(true);
             con=TestDataFactory.createResourceContact(acc.id, false);
             con.EMS_RM_Employee_Id__c = 'CP10234';
